force-app/main/default/objects/Credit_Summary__c/Credit_Summary__c.object-meta.xml
<CustomObject>
    <label>Credit Summary</label>
    <nameField>
        <displayFormat>CS- {00000000}</displayFormat>
        <label>Credit Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>