force-app/main/default/objects/Credit_Summary__c/fields/Address_matched_with_Electoral_Roll__c.field-meta.xml
<CustomField>
    <fullName>Address_matched_with_Electoral_Roll__c</fullName>
    <label>Address Matched With Electoral Roll?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>