force-app/main/default/objects/Credit_Summary__c/fields/Alias_name__c.field-meta.xml
<CustomField>
    <fullName>Alias_name__c</fullName>
    <label>Alias Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>