force-app/main/default/objects/Credit_Summary__c/fields/Annual_register_start__c.field-meta.xml
<CustomField>
    <fullName>Annual_register_start__c</fullName>
    <label>Annual Register Start</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>