force-app/main/default/objects/Credit_Summary__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Summary</relationshipLabel>
    <relationshipName>Credit_Summary1</relationshipName>
    <type>Lookup</type>
</CustomField>