force-app/main/default/objects/Credit_Summary__c/fields/Applying_for_any_other_credit__c.field-meta.xml
<CustomField>
    <fullName>Applying_for_any_other_credit__c</fullName>
    <label>Applying For Any Other Credit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>