force-app/main/default/objects/Credit_Summary__c/fields/Credit_details_as_at__c.field-meta.xml
<CustomField>
    <fullName>Credit_details_as_at__c</fullName>
    <label>Credit Details As At</label>
    <type>Date</type>
</CustomField>