force-app/main/default/objects/Credit_Summary__c/fields/Credit_score__c.field-meta.xml
<CustomField>
    <fullName>Credit_score__c</fullName>
    <label>Credit Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>