force-app/main/default/objects/Credit_Summary__c/fields/Electoral_roll_address__c.field-meta.xml
<CustomField>
    <fullName>Electoral_roll_address__c</fullName>
    <label>Electoral Roll Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>