force-app/main/default/objects/Credit_Summary__c/fields/Ever_been_declared_bankrupt__c.field-meta.xml
<CustomField>
    <fullName>Ever_been_declared_bankrupt__c</fullName>
    <label>Ever Been Declared Bankrupt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>