force-app/main/default/objects/Credit_Summary__c/fields/Ever_had_a_house_repossessed__c.field-meta.xml
<CustomField>
    <fullName>Ever_had_a_house_repossessed__c</fullName>
    <label>Ever Had a House Repossessed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>