force-app/main/default/objects/Credit_Summary__c/fields/Mortgage_or_loan_application_refused__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_or_loan_application_refused__c</fullName>
    <label>Mortgage or Loan Application Refused?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>